# PDF2KG4LLM

./: .env.example  .gitignore  README.md  README_USAGE.md  RESTART_KERNEL.md  VERSION.md  pdf2kg_batch.ipynb  pdf2kg_pipeline.ipynb  pyproject.toml
.claude/: settings.local.json
graphrag/: .gitignore
graphrag-app/: .gitignore  DEVELOPMENT.md  README.md  start.sh  stop.sh
graphrag-app/backend/: app.py  project_root.yaml  requirements.txt
graphrag-app/frontend/: package-lock.json  package.json
graphrag-app/frontend/public/: index.html
graphrag-app/frontend/src/: App.tsx
graphrag-app/frontend/src/components/: ChatPanel.tsx  DirectoryPickerDialog.tsx  FileBrowser.tsx  HomePage.tsx  KnowledgeGraph.tsx  SettingsPage.tsx  Sidebar.tsx
graphrag-app/frontend/src/services/: api.ts
graphrag-app/frontend/src/styles/: index.css
graphrag-app/frontend/src/types/: index.ts
graphrag-visualizer/src/app/api/: agent.ts
graphrag-visualizer/src/app/components/: GraphViewer.tsx
graphrag/1201/: settings.yaml
graphrag/1201/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
graphrag/christmas/: settings.yaml
graphrag/christmas/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  text_units.parquet
graphrag/graphrag/cli/: main.py  query.py
graphrag_api/: main.py
output/: kg_batch.json
src/: __init__.py  kg_builder.py  neo4j_storage.py  pdf_parser.py  visualizer.py
(+27 files in other folders)
